
===========
Changes log
===========

@version-full@ (@release-date@)
    - Bugs fixed
      - Fixed parsing of Restlet Method annotations using JDK9. Issue #1285.
        Reported by adolski.
    - Enhancements
      - Added automatic deserialization of annotated exceptions in GWT edition. Issue #1306.
        Reported by Roland Beuker.
    - Misc
      - Refreshed copyright headers
      - Upgraded fileupload dependency to 1.3.3 and commons.io to 2.6 in order to prevent
        security issues (CVE-2014-0050 and CVE-2016-3092). Issue #1310.
        Reported by Arjohn Kampman.

- 2.3.12 (10/02/2017)
    - Bugs fixed
       - XEE injection security in XML extension.
         Reported by Man Yue Mo.

- 2.3.11 (09/28/2017)
    - Bugs fixed
       - Fixed NPE in JAX-RS backend when request's entity has no media type. Issue #1271.
         Reported by Thomas Mortagne.
       - XEE injection security fix in Jax-rs extension. Issue #1286.
         Reported by Man Yue Mo.
    - Enhancements
       - Added support of Header Origin and Origin dimension. Issue #1275.
         Reported and contributed by adolski.

- 2.3.10 (05/28/2017)
    - Bugs fixed
       - Invalid max-age value for cookie settings replaced by Integer.MAX_VALUE constant. Issue #1251.
         Reported by Chad Gatesman.
       - Fixed parsing of If-Match header in case it contains an invalid tag. Issue #1258.
         Reported by Guillaume Blondeau.
       - Make the internal server connector listening to specific IP address, if provided. Issue #1256.
         Reported by Juan Manuel de Blas.
       - Fixed resolution of variables f* and h*. Issue #1260.
       - Fixed agent.properties typo resulting in unnecessary log warning. Issue #1262.
         Reported By Arjohn Kampman.
    - Enhancements
       - Add literal conversion support for the Boolean, Byte, Int16, Int32, Int64, Decimal, Single and Double 
         Edm types in the OData extension.
         Reported and contributed by Serge Sozonoff.
